# noise-cancellation-cpp

./: CMakeLists.txt  final_enhanced_traffic_output_metrics.json  final_enhanced_white_output_metrics.json  readme.md  traced_denoiser_model.pt
src/: dsp_utils.cpp  dsp_utils.hpp  hybrid_processor.cpp  hybrid_processor.hpp  main.cpp  ml_processor.cpp  ml_processor.hpp  vad.cpp  vad.hpp
